welcome.lessons.welcome.variables.Variables.scala.error
Variables:8: error: illegal start of simple expression
while (! var dejaFait:int == nbPas) {
         ^Variables:14: error: ')' expected but '}' found.
	}
        ^