welcome.lessons.welcome.variables.Variables.scala.code
var nbPas:int = 0
while (estSurBiscuit() == false) {
  avance()
  var nbPas:int = nbPas + 1
}
prendBiscuit()
var dejaFait:int = 0
while (! var dejaFait:int == nbPas) {
  recule()
  var dejaFait:int = dejaFait +1
}
poseBiscuit()